--- a/package.json
+++ b/package.json
@@ -4,11 +4,17 @@
   "description": "Teste técnico para a vaga de backend na Seidor",
   "main": "app.ts",
   "dependencies": {
+    "@types/express": "^4.17.9",
+    "@types/node": "^14.14.7",
     "express": "^4.17.1"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "ts-node": "^9.0.0",
+    "typescript": "^4.0.5"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "ts-node src/app.ts"
   },
   "author": "Rogerio Inacio",
   "license": "ISC"
